tests/error/negative_array.gw
#! [contains] NegativeArraySize: while allocating arrays
var int[-1] i;
<<< i >>>;
